User FrontEnd - Invoice Section Update

--- a/Frontend/invoice_details.html
+++ b/Frontend/invoice_details.html
@@ -193,49 +193,121 @@
 
                               </tr>
                               <tr>
-                                <td class="text text-x-sm">3GB Plan</td>
-                                <td class="text text-x-sm">25</td>
-                                <td class="text text-x-sm">4.98</td>
-                                <td class="text text-x-sm">2.10</td>
-                                <td class="text text-x-sm">35.00</td>
-                                <td class="text text-x-sm">34.00</td>
+                                <td class="text">3GB Plan</td>
+                                <td class="text">25</td>
+                                <td class="text">4.98</td>
+                                <td class="text">2.10</td>
+                                <td class="text">35.00</td>
+                                <td class="text text-right">34.00</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="6" class="small-td title-6 ">
+                                  Taxes Details
+                                </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Universal Service Fund	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">7.91 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.08
+                                </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.44</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.43</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">State Sales Tax</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">3.06 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">911 Equalization Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.06 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">1.75 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">City Sales Tax	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.73 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">3.11</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">District Sales Tax	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.24 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Regulatory Recovery Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">2.22</td>
                               </tr>
                               <tr>
-                                <td class="text text-x-sm">Unlimited Plan</td>
-                                <td class="text text-x-sm">25</td>
-                                <td class="text text-x-sm">8.00</td>
-                                <td class="text text-x-sm">3.60</td>
-                                <td class="text text-x-sm">60.00</td>
-                                <td class="text text-x-sm">57.75</td>
+                                <td class="text">3GB Plan</td>
+                                <td class="text">25</td>
+                                <td class="text">4.98</td>
+                                <td class="text">2.10</td>
+                                <td class="text">35.00</td>
+                                <td class="text text-right">34.00</td>
                               </tr>
-                              <tr>
-                                <td class="text text-x-sm">Unlimited Plan</td>
-                                <td class="text text-x-sm">24</td>
-                                <td class="text text-x-sm">8.00</td>
-                                <td class="text text-x-sm">3.60</td>
-                                <td class="text text-x-sm">60.00</td>
-                                <td class="text text-x-sm">57.75</td>
+                              <tr class="small-td">
+                                <td colspan="6" class="small-td title-6 ">
+                                  Taxes Details
+                                </td>
                               </tr>
-
-                              <tr>
-                                <td class="text text-x-sm">5GB Plan</td>
-                                <td class="text text-x-sm">23</td>
-                                <td class="text text-x-sm">18.15</td>
-                                <td class="text text-x-sm">2.70</td>
-                                <td class="text text-x-sm">60.00</td>
-                                <td class="text text-x-sm">48.76</td>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Universal Service Fund	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">7.91 </td>
                               </tr>
-                              <tr>
-                                <td class="text text-x-sm bold" >Total</td>
-                                <td class="text text-x-sm">146</td>
-                                <td class="text text-x-sm">55.13</td>
-                                <td class="text text-x-sm">19.20</td>
-                                <td class="text text-x-sm">320.00</td>
-                                <td class="text text-x-sm">309.14</td>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.08
+                                </td>
                               </tr>
-
-
-
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.44</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.43</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">State Sales Tax</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">3.06 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">911 Equalization Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.06 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">1.75 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">City Sales Tax	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.73 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">3.11</td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">District Sales Tax	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">0.24 </td>
+                              </tr>
+                              <tr class="small-td">
+                                <td colspan="4" class="text text-x-x-sm">Regulatory Recovery Fee	</td>
+                                <td colspan="2" class="text text-x-x-sm text-right">2.22</td>
+                              </tr>
 
                             </tbody>
 
