--- a/Frontend/invoice_details.html
+++ b/Frontend/invoice_details.html
@@ -189,7 +189,7 @@
                                 <th class="text text-x-x-sm text-uppercase bold">Recovery Fee</th>
                                 <th class="text text-x-x-sm text-uppercase bold">Plan Price</th>
                                 <th class="text text-x-x-sm text-uppercase bold">Billed Amount</th>
-
+                                <th class="text text-x-x-sm text-uppercase bold">Actions  </th>
 
                               </tr>
                               <tr>
@@ -199,57 +199,68 @@
                                 <td class="text">2.10</td>
                                 <td class="text">35.00</td>
                                 <td class="text text-right">34.00</td>
+                                <td><a class="show-tax bold" data-toggle="collapse" href="#show-tax-1" role="button" aria-expanded="false" aria-controls="show-tax-1">Show Taxes</a></td>
                               </tr>
-                              <tr class="small-td">
-                                <td colspan="6" class="small-td title-6 ">
-                                  Taxes Details
+                              <tr>
+                                <td colspan="7" class="no-border-top no-py height-auto ">
+                                  <div class="collapse" id="show-tax-1">
+                                    <table class="table-small">
+                                      <tr class="small-td">
+                                        <td colspan="6" class="small-td title-6 ">
+                                          Taxes Details
+                                        </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Universal Service Fund	</td>
+                                        <td  class="text text-x-x-sm text-right">7.91 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
+                                        <td  class="text text-x-x-sm text-right">0.08
+                                        </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
+                                        <td  class="text text-x-x-sm text-right">0.44</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
+                                        <td  class="text text-x-x-sm text-right">0.43</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">State Sales Tax</td>
+                                        <td  class="text text-x-x-sm text-right">3.06 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">911 Equalization Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">0.06 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
+                                        <td  class="text text-x-x-sm text-right">1.75 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">City Sales Tax	</td>
+                                        <td  class="text text-x-x-sm text-right">0.73 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">3.11</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">District Sales Tax	</td>
+                                        <td  class="text text-x-x-sm text-right">0.24 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Regulatory Recovery Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">2.22</td>
+                                      </tr>
+                                    </table>
+                                  </div>
+
                                 </td>
                               </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Universal Service Fund	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">7.91 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.08
-                                </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.44</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.43</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">State Sales Tax</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">3.06 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">911 Equalization Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.06 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">1.75 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">City Sales Tax	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.73 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">3.11</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">District Sales Tax	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.24 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Regulatory Recovery Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">2.22</td>
-                              </tr>
+
                               <tr>
                                 <td class="text">3GB Plan</td>
                                 <td class="text">25</td>
@@ -257,56 +268,66 @@
                                 <td class="text">2.10</td>
                                 <td class="text">35.00</td>
                                 <td class="text text-right">34.00</td>
+                                <td><a class="show-tax bold" data-toggle="collapse" href="#show-tax-2" role="button" aria-expanded="false" aria-controls="show-tax-2">Show Taxes</a></td>
                               </tr>
-                              <tr class="small-td">
-                                <td colspan="6" class="small-td title-6 ">
-                                  Taxes Details
+                              <tr>
+                                <td colspan="7" class="no-border-top no-py height-auto ">
+                                  <div class="collapse" id="show-tax-2">
+                                    <table class="table-small">
+                                      <tr class="small-td">
+                                        <td colspan="6" class="small-td title-6 ">
+                                          Taxes Details
+                                        </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Universal Service Fund	</td>
+                                        <td  class="text text-x-x-sm text-right">7.91 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
+                                        <td  class="text text-x-x-sm text-right">0.08
+                                        </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
+                                        <td  class="text text-x-x-sm text-right">0.44</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
+                                        <td  class="text text-x-x-sm text-right">0.43</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">State Sales Tax</td>
+                                        <td  class="text text-x-x-sm text-right">3.06 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">911 Equalization Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">0.06 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
+                                        <td  class="text text-x-x-sm text-right">1.75 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">City Sales Tax	</td>
+                                        <td  class="text text-x-x-sm text-right">0.73 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">3.11</td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">District Sales Tax	</td>
+                                        <td  class="text text-x-x-sm text-right">0.24 </td>
+                                      </tr>
+                                      <tr class="small-td">
+                                        <td  class="text text-x-x-sm">Regulatory Recovery Fee	</td>
+                                        <td  class="text text-x-x-sm text-right">2.22</td>
+                                      </tr>
+                                    </table>
+                                  </div>
+
                                 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Universal Service Fund	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">7.91 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">FCC Cost Recovery Fee		</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.08
-                                </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (Non-IPCTS)	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.44</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Federal Telecommunications Relay Services Fund (IPCTS)	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.43</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">State Sales Tax</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">3.06 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">911 Equalization Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.06 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">911 Surcharge - VoIP Commercial Lines	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">1.75 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">City Sales Tax	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.73 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Municipal Right-Of-Way Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">3.11</td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">District Sales Tax	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">0.24 </td>
-                              </tr>
-                              <tr class="small-td">
-                                <td colspan="4" class="text text-x-x-sm">Regulatory Recovery Fee	</td>
-                                <td colspan="2" class="text text-x-x-sm text-right">2.22</td>
                               </tr>
 
                             </tbody>
