--- a/Frontend/invoice_details.html
+++ b/Frontend/invoice_details.html
@@ -148,8 +148,8 @@
                       <div class="card-content-header__actions v2">
                         <button type="button" id="export-data" class="btn btn-sm"><i class="mdi mdi-printer" aria-hidden="true"></i> <span>Print</span>
                         </button>
-
-
+                        <button type="button" data-toggle="collapse" data-target=".show-taxes" class="btn btn-sm"><i class="mdi mdi-eye" aria-hidden="true"></i> <span>Toggle Taxes</span>
+                        </button>
                       </div>
                     </div>
 
@@ -189,7 +189,6 @@
                                 <th class="text text-x-x-sm text-uppercase bold">Recovery Fee</th>
                                 <th class="text text-x-x-sm text-uppercase bold">Plan Price</th>
                                 <th class="text text-x-x-sm text-uppercase bold">Billed Amount</th>
-                                <th class="text text-x-x-sm text-uppercase bold">Actions  </th>
 
                               </tr>
                               <tr>
@@ -199,11 +198,10 @@
                                 <td class="text">2.10</td>
                                 <td class="text">35.00</td>
                                 <td class="text text-right">34.00</td>
-                                <td><a class="show-tax bold" data-toggle="collapse" href="#show-tax-1" role="button" aria-expanded="false" aria-controls="show-tax-1">Show Taxes</a></td>
                               </tr>
                               <tr>
                                 <td colspan="7" class="no-border-top no-py height-auto ">
-                                  <div class="collapse" id="show-tax-1">
+                                  <div class="collapse show-taxes" >
                                     <table class="table-small">
                                       <tr class="small-td">
                                         <td colspan="6" class="small-td title-6 ">
@@ -268,11 +266,10 @@
                                 <td class="text">2.10</td>
                                 <td class="text">35.00</td>
                                 <td class="text text-right">34.00</td>
-                                <td><a class="show-tax bold" data-toggle="collapse" href="#show-tax-2" role="button" aria-expanded="false" aria-controls="show-tax-2">Show Taxes</a></td>
                               </tr>
                               <tr>
                                 <td colspan="7" class="no-border-top no-py height-auto ">
-                                  <div class="collapse" id="show-tax-2">
+                                  <div class="collapse show-taxes">
                                     <table class="table-small">
                                       <tr class="small-td">
                                         <td colspan="6" class="small-td title-6 ">
